--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -1,3 +1,11 @@
-<center><marquee><h3 style="color:blue;">Welcome to syahNet&trade;</h3></marquee></center>
+<h3 style="margin-top:10px;">Welcome to syahNet&trade;</h3>
 
-<p>Hello world!</p>
+<p><strong>Hello!</strong> Thank you for expressing an interest in syahNet &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
+
+<p>Here, you'll be able to catch up with the latest news, view full 16-bit colour images, and much more!</p>
+
+<p>We're currently <span style="color:brown;">under construction</span>, and expect to launch fully in the coming weeks, so please bear with us as we get up to speed.</p>
+
+<p></p>Be sure to check back soon for more information on the syahNet system!</p>
+
+<p>&nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;The syahOS development team</p>
