Font change on browser

--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -1,4 +1,4 @@
-<h3 style="margin-top:10px;">Welcome to syahNet&trade;</h3>
+<h1>Welcome to syahNet!</h1>
 
 <p><strong>Hello!</strong> Thank you for expressing an interest in syahNet &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
 
