syahnet back/forward done!

--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -9,3 +9,5 @@
 <p></p>Be sure to check back soon for more information on the syahNet system!</p>
 
 <p>&nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;The syahOS development team</p>
+
+<p><a href="lipsum.html">Lipsum</a></p>
