--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -1,5 +1,7 @@
 <h1>Welcome to syahNet!</h1>
 
+<img src="/syahnet/img/syah_balloons.gif">
+
 <p><strong>Hello!</strong> Thank you for expressing an interest in syahNet &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
 
 <p>Here, you'll be able to catch up with the latest news, view full 16-bit colour images, and much more!</p>
@@ -9,5 +11,3 @@
 <p></p>Be sure to check back soon for more information on the syahNet system!</p>
 
 <p>&nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;The syahOS development team</p>
-
-<p><a href="lipsum.html">Lipsum</a></p>
