--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -1,8 +1,8 @@
-<h1>Welcome to syahNet!</h1>
+<!-- <h1>Welcome to syahNet!</h1> -->
 
-<img src="/syahnet/img/syah_balloons.gif">
+<img src="/syahnet/img/syah_band.gif">
 
-<p><strong>Hello!</strong> Thank you for expressing an interest in syahNet &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
+<p><strong>Hello!</strong> Thank you for expressing an interest in <strong>syahNet</strong> &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
 
 <p>Here, you'll be able to catch up with the latest news, view full 16-bit colour images, and much more!</p>
 
