tweaks to syahnet pages

--- a/public/syahnet/home.html
+++ b/public/syahnet/home.html
@@ -1,7 +1,7 @@
-<!-- <h1>Welcome to syahNet!</h1> -->
-
-<img src="/syahnet/img/syah_band.gif">
-
+<div style="text-align:center;"><img src="https://via.placeholder.com/200x50"></div>
+<hr>
+<p style="text-align:center;"><a href="index.html">index</a> &mdash; <a href="news.html">news</a> &mdash; clickable &mdash; things</p>
+<hr>
 <p><strong>Hello!</strong> Thank you for expressing an interest in <strong>syahNet</strong> &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
 
 <p>Here, you'll be able to catch up with the latest news, view full 16-colour images, and much more!</p>
