--- a/public/syahnet/index.html
+++ b/public/syahnet/index.html
@@ -1,6 +1,6 @@
 <!-- <h1>Welcome to syahNet!</h1> -->
 
-<img src="/syahnet/img/syah_band.gif">
+<img src="/syahnet/img/syah_band.gif" style="width:100%;">
 
 <p><strong>Hello!</strong> Thank you for expressing an interest in <strong>syahNet</strong> &mdash; the brand new, state-of-the-art content delivery system for <em>syahOS</em>.</p>
 
